# NLP-DL-07-Text_Summarizer

./: .gitignore  README.md  main.py  params.yaml  pyproject.toml  requirements.txt  requirements_updated.txt  template.py
research/: 01_data_ingestion.ipynb  02_data_validation.ipynb  03_data_transformation.ipynb  04_model_trainer.ipynb  05_Model_evaluation.ipynb  Text_Summarization.ipynb  trials.ipynb
src/TextSummarizer/config/: configuration.py
src/TextSummarizer/conponents/: data_ingestion.py  data_transformation.py  data_validation.py  model_trainer.py
src/TextSummarizer/constants/: __init__.py
src/TextSummarizer/entity/: __init__.py
src/TextSummarizer/exception/: __init__.py
src/TextSummarizer/logger/: __init__.py
src/TextSummarizer/pipeline/: stage_01_data_ingestion.py  stage_02_data_validation.py  stage_03_data_transformation.py  stage_04_model_trainer.py  stage_05_model_evaluation.py
src/TextSummarizer/utils/: utils.py
