[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[options.packages.find]
where = "."

[project]
name = "TextSummarizer"
version = "0.0.1"
authors = [{name = "junaid-o"}]
description = "TextSummarizer is Compatible With Python=3.10.12"
readme = "README.md"
requires-python = ">=3.10.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" ="https://github.com/junaid-o/NLP-DL-07-Text_Summarizer"
"Bug Tracker" = "https://github.com/junaid-o/NLP-DL-07-Text_Summarizer"